--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 PORT=8000
-MONGO_URI=mongodb+srv://restassureinfo:@dev.uzo2x.mongodb.net/MEGA
+MONGO_URI=mongodb+srv://restassureinfo:qFLx7mFoBoZBNaRZ@dev.uzo2x.mongodb.net/MEGA
 BASE_URL=http://localhost:8000
 
 ACCESS_TOKEN_SECRET=hdajd
-ACCESS_TOKEN_EXPIRY=1m
+ACCESS_TOKEN_EXPIRY=60m
 REFRESH_TOKEN_SECRET=isykfs
-REFRESH_TOKEN_EXPIRY=60m
+REFRESH_TOKEN_EXPIRY=24h
 
-MAIL_TRAP_HOST=
-MAIL_TRAP_PORT=
-MAIL_TRAP_USER=
-MAIL_TRAP_PASS=
+MAIL_TRAP_HOST=sandbox.smtp.mailtrap.io
+MAIL_TRAP_PORT=2525
+MAIL_TRAP_USER=09891ec901b217
+MAIL_TRAP_PASS=d3240797a8081c
