--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,7 @@ MAIL_TRAP_HOST=
 MAIL_TRAP_PORT=
 MAIL_TRAP_USER=
 MAIL_TRAP_PASS=
+
+CLOUDNARY_CLOUD_NAME=
+CLOUDNARY_API_KEY=
+CLOUDNARY_API_SECRET=
