--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,9 @@
 PORT=8000
 MONGO_URI=
-BASE_URL=
+BASE_URL=http://localhost:8000
+CORS_ORIGIN=http://localhost:5173
+FRONTEND_URL=http://localhost:5173
+
 
 ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=60m
